--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,37 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Page</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 
 </head>
 
 <body>
-
-    <header class="header">
+        <header class="header">
 
         <div class="header">
             <nav class="navbar">
-                <a href="#">Home</a>
+                <a href="/">Home</a>
                 <a href="#">Catalog</a>
                 <!--Only for logged user-->
                 <a href="#">Profile</a>
                 <a href="#">Create Review</a>
-                <a href="#">Logout</a>
+                <a href="/auth/logout">Logout</a>
                 <!--Only for guest-->
-                <a href="#">Login</a>
-                <a href="#">Register</a>
+                <a href="/auth/login">Login</a>
+                <a href="/auth/register">Register</a>
             </nav>
         </div>
 
     </header>
 
-    <section id="not-found-page">
-        <div class="not-found-page-container">
-            <h1>404</h1>
-            <h2>Page Not Found</h2>
-        </div>
-    </section>
+{{{ body }}}
 </body>
 
 </html>
