--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,7 +11,7 @@
         <form action="/auth/login" method="POST">
             <h3>Login</h3>
             <label>Email</label>
-            <input type="email" name="username" class="box" id="">
+            <input type="email" name="email" class="box" id="">
             <label>Password</label>
             <input type="password" name="password" class="box" id="">
             <input type="submit" value="Login" class="btn">
