--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,13 +18,14 @@
             <nav class="navbar">
                 <a href="/">Home</a>
                 <a href="#">Catalog</a>
-                <!--Only for logged user-->
+               {{#if user}}
                 <a href="#">Profile</a>
                 <a href="#">Create Review</a>
                 <a href="/auth/logout">Logout</a>
-                <!--Only for guest-->
+               {{else}}
                 <a href="/auth/login">Login</a>
                 <a href="/auth/register">Register</a>
+                {{/if}}
             </nav>
         </div>
 
