--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,62 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+{{#if error}}
+<div class="errorContainer">
+    <p>{{error.message}}</p>
+</div>
+{{/if}}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Page</title>
-    <link rel="stylesheet" href="./css/style.css" />
+<section class="create-form-container">
 
-</head>
-
-<body>
-
-    <!-- In case of error, you should display div with class "errorContainer" -->
-    <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-    <!-- <div>
-        <div class="errorContainer">
-            <p>Error</p>
-        </div>
-    </div> -->
-
-    <header class="header">
-
-        <div class="header">
-            <nav class="navbar">
-                <a href="#">Home</a>
-                <a href="#">Catalog</a>
-                <!--Only for logged user-->
-                <a href="#">Profile</a>
-                <a href="#">Create Review</a>
-                <a href="#">Logout</a>
-                <!--Only for guest-->
-                <a href="#">Login</a>
-                <a href="#">Register</a>
-            </nav>
-        </div>
-
-    </header>
-
-    <section class="create-form-container">
-
-        <form action="">
-            <h3>Create Book Review</h3>
-            <label>Title</label>
-            <input type="text" name="" class="box" id="">
-            <label>Author</label>
-            <input type="text" name="" class="box" id="">
-            <label>Genre</label>
-            <input type="text" name="" class="box" id="">
-            <label>Stars</label>
-            <input type="number" name="" class="box" id="">
-            <label>Image</label>
-            <input type="text" name="" class="box" id="">
-            <label>Review</label>
-            <textarea class="box" name=""></textarea>
-            <input type="submit" value="Create" class="btn">
-        </form>
-    </section>
-</body>
-
-</html>
+    <form action="/products/create" method="POST">
+        <h3>Create Book Review</h3>
+        <label>Title</label>
+        <input type="text" name="title" class="box" id="">
+        <label>Author</label>
+        <input type="text" name="author" class="box" id="">
+        <label>Genre</label>
+        <input type="text" name="genre" class="box" id="">
+        <label>Stars</label>
+        <input type="number" name="stars" class="box" id="">
+        <label>Image</label>
+        <input type="text" name="image" class="box" id="">
+        <label>Review</label>
+        <textarea class="box" name="bookReview"></textarea>
+        <input type="submit" value="Create" class="btn">
+    </form>
+</section>
