--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,10 +17,10 @@
         <div class="header">
             <nav class="navbar">
                 <a href="/">Home</a>
-                <a href="#">Catalog</a>
+                <a href="/products/catalog">Catalog</a>
                {{#if user}}
                 <a href="#">Profile</a>
-                <a href="#">Create Review</a>
+                <a href="/products/create">Create Review</a>
                 <a href="/auth/logout">Logout</a>
                {{else}}
                 <a href="/auth/login">Login</a>
