--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,20 +1,18 @@
-    <!-- In case of error, you should display div with class "errorContainer" -->
-    <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-    <!-- <div>
-        <div class="errorContainer">
-            <p>Error</p>
-        </div>
-    </div> -->
+{{#if error}}
+<div class="errorContainer">
+    <p>{{error.message}}</p>
+</div>
+{{/if}}
 
-    <section class="login-form-container">
+<section class="login-form-container">
 
-        <form action="/auth/login" method="POST">
-            <h3>Login</h3>
-            <label>Email</label>
-            <input type="email" name="email" class="box" id="">
-            <label>Password</label>
-            <input type="password" name="password" class="box" id="">
-            <input type="submit" value="Login" class="btn">
-            <p>Don't have an account ? <a href="/auth/register">Create one</a></p>
-        </form>
-    </section>
+    <form action="/auth/login" method="POST">
+        <h3>Login</h3>
+        <label>Email</label>
+        <input type="email" name="email" class="box" id="">
+        <label>Password</label>
+        <input type="password" name="password" class="box" id="">
+        <input type="submit" value="Login" class="btn">
+        <p>Don't have an account ? <a href="/auth/register">Create one</a></p>
+    </form>
+</section>
