--- a/views/details.hbs
+++ b/views/details.hbs
@@ -11,9 +11,10 @@
 
             {{#if user}}
             <div class="buttons">
-                <!-- Only for registered user and author of the review -->
+                {{#if products.isOwner}}
                 <a href="#" class="btn-edit">Edit</a>
                 <a href="#" class="btn-delete">Delete</a>
+                {{/if}}
                 <!-- logged in user who has not yet wished book-->
                 <a href="#" class="btn-wish">Wish to read</a>
                 <!-- logged in user who has already wished book-->
