--- a/views/details.hbs
+++ b/views/details.hbs
@@ -12,13 +12,14 @@
             {{#if user}}
             <div class="buttons">
                 {{#if products.isOwner}}
-                <a href="#" class="btn-edit">Edit</a>
+                <a href="/edit/{{products._id}}" class="btn-edit">Edit</a>
                 <a href="#" class="btn-delete">Delete</a>
                 {{/if}}
-                <!-- logged in user who has not yet wished book-->
+               {{#if products.isWished}}
                 <a href="#" class="btn-wish">Wish to read</a>
-                <!-- logged in user who has already wished book-->
+                {{else}}
                 <p class="wish-pub">You already added the book to your wish list</p>
+                {{/if}}
             </div>
             {{/if}}
         </article>
