--- a/views/details.hbs
+++ b/views/details.hbs
@@ -15,8 +15,9 @@
                 <a href="/edit/{{products._id}}" class="btn-edit">Edit</a>
                 <a href="#" class="btn-delete">Delete</a>
                 {{/if}}
-               {{#if products.isWished}}
-                <a href="#" class="btn-wish">Wish to read</a>
+
+               {{#if products.showWishBtn}}
+                <a href="/read/{{products._id}}" class="btn-wish">Wish to read</a>
                 {{else}}
                 <p class="wish-pub">You already added the book to your wish list</p>
                 {{/if}}
