--- a/views/details.hbs
+++ b/views/details.hbs
@@ -13,7 +13,7 @@
             <div class="buttons">
                 {{#if products.isOwner}}
                 <a href="/edit/{{products._id}}" class="btn-edit">Edit</a>
-                <a href="#" class="btn-delete">Delete</a>
+                <a href="/delete/{{products._id}}" class="btn-delete">Delete</a>
                 {{/if}}
 
                {{#if products.showWishBtn}}
