--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -28,7 +28,7 @@
                 <a href="/">Home</a>
                 <a href="/products/catalog">Catalog</a>
                 {{#if user}}
-                <a href="#">Profile</a>
+                <a href="/auth/profile">Profile</a>
                 <a href="/products/create">Create Review</a>
                 <a href="/auth/logout">Logout</a>
                 {{else}}
